# veris

./: .gitignore  Cargo.toml  LICENSE  README.md  veris.toml
crates/veris-cli/: Cargo.toml
crates/veris-cli/src/: client.rs  main.rs
crates/veris-db/: Cargo.toml
crates/veris-db/benches/: bench.rs
crates/veris-db/src/: encoding.rs  engine.rs  error.rs  exec.rs  lib.rs  storage.rs  types.rs  util.rs
crates/veris-db/src/encoding/: bytes.rs  key.rs  key_value.rs  value.rs
crates/veris-db/src/encoding/key/: de.rs  ser.rs
crates/veris-db/src/engine/: debug.rs  local.rs  mvcc.rs
crates/veris-db/src/exec/: aggregate.rs  executor.rs  expr.rs  join.rs  plan.rs  planner.rs  scope.rs  session.rs
crates/veris-db/src/storage/: bitcask.rs  engine.rs  memory.rs  mvcc.rs
crates/veris-db/src/types/: schema.rs  value.rs
crates/veris-db/src/util/: wrapper.rs
crates/veris-net/: Cargo.toml
crates/veris-net/src/: request.rs
crates/veris-server/: Cargo.toml
crates/veris-server/src/: main.rs  server.rs
sql/: create.sql  insert.sql  query.sql  test1.sql
