[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"]}
clap = { version = "4.5.38", features = ["derive"] }
clap-serde = "0.5.1"
clap-serde-derive = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlparser = { version = "0.56.0", features = ["serde", "visitor"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
derive_more = { version = "2.0.1", features = ["full"]}
log = "0.4.27"
env_logger = "0.11.8"
serde_json = "1.0.140"
