[package]
name = "veris-db"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {workspace = true}
derive_more = {workspace = true}
sqlparser = {workspace = true}
thiserror = {workspace = true}
log = {workspace = true}
dyn-clone = "1.0.19"
itertools = "0.14.0"
bincode = { version = "2.0.1", features = ["serde"] }
serde_bytes = "0.11.17"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.6.0" }
tempfile = { version = "3.7.0" }

[[bench]]
name = "bench"
harness = false
